--- a/MarioParty/MarioParty/Base.lproj/Main.storyboard
+++ b/MarioParty/MarioParty/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,20 +43,26 @@
                                 <state key="normal" title="اضغط      السهم">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="randomPlayer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bJq-ni-kQW"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="playerImageView" destination="pu0-wM-2XI" id="RCx-4x-9xf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
-        <!--View Controller-->
+        <!--Player DetailsVC-->
         <scene sceneID="sqe-Yj-qk9">
             <objects>
-                <viewController id="moA-X3-dsJ" sceneMemberID="viewController">
+                <viewController id="moA-X3-dsJ" customClass="PlayerDetailsVC" customModule="MarioParty" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="c6m-oi-LVs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -80,29 +86,41 @@
                                 <rect key="frame" x="171" y="670" width="72" height="62"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="dice"/>
+                                <connections>
+                                    <action selector="randomizeStars:" destination="moA-X3-dsJ" eventType="touchUpInside" id="yZX-OE-aCr"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1fO-jb-TIe">
                                 <rect key="frame" x="90" y="570" width="235" height="92"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZG-MM-prh">
-                                <rect key="frame" x="361" y="14" width="40" height="40"/>
+                                <rect key="frame" x="341" y="20" width="53" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="music"/>
+                                <connections>
+                                    <action selector="playCharacterSound:" destination="moA-X3-dsJ" eventType="touchUpInside" id="ylK-1P-NSZ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="B8z-nN-jML"/>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="mbv-bF-p2C" id="C4z-eV-aCm"/>
+                        <outlet property="imageView" destination="jzQ-AF-OFT" id="Gt7-f1-zYA"/>
+                        <outlet property="nameLabel" destination="zIa-Xw-NmJ" id="5Aj-TX-c6r"/>
+                        <outlet property="starsImageView" destination="1fO-jb-TIe" id="BKa-AP-CaI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GkX-3e-R6f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="884" y="138"/>
+            <point key="canvasLocation" x="882.60869565217399" y="137.94642857142856"/>
         </scene>
     </scenes>
     <resources>
         <image name="MarioBG" width="414" height="896"/>
-        <image name="MarioPartyBG" width="1440" height="2560"/>
+        <image name="MarioPartyBG" width="414" height="654"/>
         <image name="dice" width="455" height="398"/>
         <image name="music" width="53" height="57"/>
         <image name="next" width="133" height="105"/>
